hphp/test/zend/good/tests/lang/bug25922.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: data' in %s/bug25922.php:11
Stack trace:
%A
